Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13687

interop: "lfs find" prints spurious "No such file or directory" error messages

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0, Lustre 2.12.6
    • Lustre 2.14.0, Lustre 2.12.4
    • None
    • v2_13_54-44-gf3fef81
    • 9223372036854775807

      When running "lfs find" it prints a spurious error message for each directory that it processes, and then appears to take the last argument "0" as the directory name when printing the summary error message:

      # lfs find /myth/tmp -size +100K --ost 0
      lfs find: warning: /myth/tmp does not exist: No such file or directory (2)  
      lfs find: warning: /myth/tmp/mythtv does not exist: No such file or directory (2)
      lfs find: warning: /myth/tmp/testdir does not exist: No such file or directory (2)
      /myth/tmp/pflfile2
      /myth/tmp/40T
      :
      :
      error: find failed for 0.
      

      Reversing the order of the arguments prints the final error message correctly:

      # lfs find -size +100K --ost 0 /myth/tmp
      lfs find: warning: /myth/tmp does not exist: No such file or directory (2)  
      lfs find: warning: /myth/tmp/mythtv does not exist: No such file or directory (2)
      lfs find: warning: /myth/tmp/testdir does not exist: No such file or directory (2)
      /myth/tmp/pflfile2
      /myth/tmp/40T
      :
      :
      error: find failed for /myth/tmp.
      

      I suspect the "No such file or directory (2)" message may be incorrectly a result of getxattr() or IOC_MDC_GETFILEINFO on the file returning -ENOENT and that being printed rather than ignored?

            adilger Andreas Dilger
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: